--- a/app/src/main/res/layout/activity_add_class.xml
+++ b/app/src/main/res/layout/activity_add_class.xml
@@ -8,76 +8,83 @@
     tools:context=".AddClass">
 
     <!-- Back Button ImageView -->
-    <ImageView
-        android:id="@+id/go_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/baseline_arrow_back_ios_24"
-        android:layout_marginTop="10dp"
-        android:paddingStart="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
-    <!-- User Icon ImageView -->
-    <ImageView
-        android:id="@+id/user_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/baseline_man_24"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/profile"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="10dp" />
 
     <!-- Title TextView -->
+
+    <!-- Background Shape LinearLayout -->
+
+    <!-- Save Button -->
+
+    <!-- Cancel Button -->
+
+    <!-- BottomNavigationView for improved navigation -->
+
+    <ImageView
+        android:id="@+id/go_back"
+        android:layout_width="46dp"
+        android:layout_height="43dp"
+        android:paddingStart="10dp"
+        android:src="@drawable/baseline_arrow_back_ios_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.043"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.059"
+        app:tint="?attr/colorOnSurface" />
+
     <TextView
-        android:fontFamily="@font/poppins_bold"
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="Add New Class"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.468"
+        app:layout_constraintHorizontal_bias="0.439"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.06" />
 
-    <!-- Background Shape LinearLayout -->
     <LinearLayout
-        android:gravity="center_vertical"
         android:layout_width="292dp"
         android:layout_height="326dp"
-        android:layout_marginTop="44dp"
-        android:background="@drawable/roundshape"
+        android:gravity="center_vertical"
         android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView"
-        android:padding="16dp"> <!-- Added padding for better spacing -->
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.294"
+        style="@style/BOX"> <!-- Added padding for better spacing -->
 
         <!-- New Class Name -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
 
             <TextView
-                android:fontFamily="@font/poppins"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
                 android:layout_weight="1"
-                android:text="New Class Name:"
-                android:layout_marginEnd="10dp" />
+                android:fontFamily="@font/poppins"
+                android:text="Class Name:"
+                style="@style/TEXT"/>
 
             <EditText
                 android:id="@+id/class_name"
                 android:layout_width="128dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#ffffff" />
+                android:background="#ffffff"
+                style="@style/ETEXT"/>
         </LinearLayout>
 
         <!-- Course Name -->
@@ -88,118 +95,146 @@
             android:orientation="horizontal">
 
             <TextView
-                android:fontFamily="@font/poppins"
                 android:layout_width="wrap_content"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:text="Course Name:" />
+                android:layout_marginEnd="5dp"
+                android:layout_weight="1"
+                android:text="Course Name:"
+                style="@style/TEXT"/>
 
             <EditText
                 android:id="@+id/course_name"
                 android:layout_width="128dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#ffffff" />
+                android:background="#ffffff"
+                style="@style/ETEXT"
+                />
         </LinearLayout>
 
         <!-- Class and Section -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
 
             <TextView
-                android:fontFamily="@font/poppins"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Class &amp; Section:"
-                android:layout_marginEnd="10dp" />
+                android:layout_marginEnd="63dp"
+                android:fontFamily="@font/poppins"
+                android:text="Section:"
+                style="@style/TEXT"/>
 
             <EditText
                 android:id="@+id/section"
                 android:layout_width="128dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#ffffff" />
+                android:background="#ffffff"
+                style="@style/ETEXT"/>
         </LinearLayout>
 
         <!-- Class Start Date -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
 
             <TextView
-                android:fontFamily="@font/poppins"
                 android:layout_width="wrap_content"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="Class Start Date:"
-                android:layout_marginEnd="10dp" />
+                android:layout_marginEnd="30dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/poppins"
+                android:text="Start Date:"
+                style="@style/TEXT"/>
 
             <EditText
                 android:id="@+id/start_date"
                 android:layout_width="128dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#ffffff" />
+                android:background="#ffffff"
+                android:focusable="false"
+                style="@style/ETEXT"/>
         </LinearLayout>
 
         <!-- Class End Date -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
 
             <TextView
-                android:fontFamily="@font/poppins"
                 android:layout_width="wrap_content"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="Class End Date:"
-                android:layout_marginEnd="10dp" />
+                android:layout_marginEnd="35dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/poppins"
+                android:text="End Date:"
+                style="@style/TEXT"/>
 
             <EditText
                 android:id="@+id/end_date"
                 android:layout_width="128dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#ffffff" />
+                android:background="#ffffff"
+                android:focusable="false"
+                style="@style/ETEXT"/>
         </LinearLayout>
 
     </LinearLayout>
 
-    <!-- Save Button -->
     <Button
-        android:fontFamily="@font/poppins"
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginBottom="156dp"
         android:backgroundTint="#8E44AD"
+        android:fontFamily="@font/poppins"
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.191"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.633" />
 
-    <!-- Cancel Button -->
     <Button
-        android:fontFamily="@font/poppins"
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="156dp"
-        android:backgroundTint="#ffffff"
+        android:backgroundTint="#F0ECF0"
+        android:fontFamily="@font/poppins"
         android:text="Cancel"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.58"
-        app:layout_constraintStart_toEndOf="@id/button" />
+        app:layout_constraintHorizontal_bias="0.817"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.633" />
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/bottom_nav_selector"
+        app:itemIconTint="@drawable/nav_item_selector_class"
+        app:itemTextColor="@color/black"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:menu="@menu/bottom_nav_menu"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
