--- a/app/src/main/res/layout/activity_class_list.xml
+++ b/app/src/main/res/layout/activity_class_list.xml
@@ -12,6 +12,9 @@
 
     <!-- RecyclerView for displaying students in a card format -->
 
+
+    <!-- FloatingActionButton for adding new students -->
+
     <TextView
         android:id="@+id/class_name"
         android:layout_width="204dp"
@@ -19,33 +22,75 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="183dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="70dp"
         android:text="Class List"
-        android:textSize="25dp"
-        android:textStyle="bold" />
+        android:textSize="30dp"
+        android:textStyle="bold"
+        style="@style/TEXT"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_class"
         android:layout_width="match_parent"
         android:layout_height="557dp"
         android:layout_below="@+id/class_name"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="5dp"
         android:padding="8dp"
         android:scrollbars="vertical" />
 
-    <!-- FloatingActionButton for adding new students -->
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/fab_class"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_marginBottom="90dp"-->
+<!--        android:layout_marginEnd="50dp"-->
+<!--        android:backgroundTint="@color/purple_200"-->
+<!--        android:src="@drawable/baseline_add_24"-->
+<!--        app:tint="@color/white" />-->
+<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--        android:id="@+id/bottomNav"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        app:menu="@menu/bottom_nav_menu"-->
+<!--        android:background="@drawable/bottom_nav_selector"-->
+<!--        app:itemIconTint="@drawable/nav_item_selector_class"-->
+<!--        app:itemTextColor="@color/black"-->
+<!--         />-->
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_class"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="40dp"
-        android:backgroundTint="@color/purple_200"
+        android:layout_marginBottom="90dp"
+        android:layout_marginEnd="50dp"
+        android:backgroundTint="@color/purple_300"
         android:src="@drawable/baseline_add_24"
         app:tint="@color/white" />
+    <LinearLayout
+        android:id="@+id/nav_bar"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/lavender_border"
+        >
+
+
+    </LinearLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_nav_menu"
+        android:background="@drawable/rounded_border"
+        app:itemIconTint="@drawable/nav_item_selector_class"
+        app:itemTextColor="@color/black"
+        />
 
 </RelativeLayout>
