--- a/app/src/main/res/layout/activity_item_student.xml
+++ b/app/src/main/res/layout/activity_item_student.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:elevation="4dp">
+    android:elevation="4dp"
+    app:cardCornerRadius="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@drawable/lavender_border"
         android:padding="16dp">
 
         <TextView
             android:id="@+id/studentName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Student Name"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -24,31 +26,34 @@
             android:id="@+id/studentRoll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginEnd="16dp"
             android:text="Roll: 123"
-            android:layout_marginLeft="16dp"
-            android:textSize="20dp"/>
+            android:textSize="20dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="180dp">
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/editIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/baseline_edit_24"
                 android:padding="8dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/baseline_edit_24"
+                app:tint="?attr/colorOnSurface"
                 />
 
             <ImageView
                 android:id="@+id/deleteIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/baseline_delete_outline_24"
                 android:padding="8dp"
-                android:layout_marginLeft="15dp"/>
+                android:src="@drawable/baseline_delete_outline_24"
+                app:tint="?attr/colorOnSurface"/>
 
         </LinearLayout>
     </LinearLayout>
