--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -24,7 +24,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/img"
+            android:src="@drawable/spalsh"
 
         />
 
@@ -49,7 +49,7 @@
             android:fontFamily="@font/poppins_bold"
             android:gravity="center"
             android:text="Welcome Back!"
-            android:textColor="@color/black"
+            style="@style/TEXT"
             android:textSize="20dp"
 
             />
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Please Login to your Account"
-            android:textColor="@color/black"
+            style="@style/TEXT"
             android:textSize="12sp"
             />
 
@@ -69,7 +69,7 @@
             android:fontFamily="@font/poppins"
             android:paddingStart="60dp"
             android:text="Email"
-            android:textColor="@color/black"
+            style="@style/TEXT"
             android:textSize="13sp" />
 
         <EditText
@@ -81,34 +81,38 @@
             android:layout_marginStart="55dp"
             android:layout_marginEnd="55dp"
             android:padding="8dp"
+            style="@style/ETEXT"
             android:hint="abc@gmail.com"
             android:background="@drawable/roundshape"
-            android:backgroundTint="#FBE5FF"
+
             />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:layout_marginTop="30dp"
             android:fontFamily="@font/poppins"
             android:paddingStart="60dp"
             android:text="Password"
-            android:textColor="@color/black"
+
+            style="@style/HINT"
             android:textSize="13sp" />
 
         <EditText
             android:id="@+id/password"
+            android:inputType="textPassword"
             android:layout_width="match_parent"
-            android:backgroundTint="#FBE5FF"
+
             android:layout_height="wrap_content"
             android:layout_marginStart="55dp"
             android:layout_marginEnd="55dp"
             android:padding="8dp"
+            style="@style/ETEXT"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/poppins"
             android:hint="enter your password"
             android:background="@drawable/roundshape"
-            android:inputType="textPassword"
             />
         <TextView
             android:id="@+id/forgot"
