--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="green">#4CAF50</color>
+    <color name="red">#E70606</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_300">#8E44AD</color>
+    <color name="purple_700">#5A2B6D</color>
+    <color name="purple_900">#800080</color>
+    <color name="teal_200">#008080</color>
+    <color name="teal_700">#005959</color>
+    <color name="drawable_color_light">#FFF</color>
+    <color name="drawable_color_dark">#290837</color>
+    <color name="drawable_color_light2">#FBE5FF</color> <!-- for light mode -->
+    <color name="drawable_color_dark2">#FFFFFF</color><!-- for dark mode -->
 </resources>
